<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#009688"
    android:padding="20dp"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginStart="158dp"
        android:layout_marginTop="436dp"
        android:layout_marginEnd="159dp"
        android:text="@string/LoginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblLoginResult"
        android:layout_width="320dp"
        android:layout_height="96dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="552dp"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtUsername"
        android:layout_width="286dp"
        android:layout_height="60dp"
        android:layout_marginTop="244dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_mail"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/LoginUsername"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.562"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="279dp"
        android:layout_height="55dp"
        android:layout_marginTop="340dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_lock"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/LoginPassword"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.557"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck"
        android:autofillHints="" />

</androidx.constraintlayout.widget.ConstraintLayout>